--- a/src/white/style.css
+++ b/src/white/style.css
@@ -1,13 +1,14 @@
-#white{
-  width: 100%;
-  height: 400px;
+.white{
+  width: 1024px;
+  height: 800px;
   border: 1px solid #ccc;
-  position: absolute;
   left: 0; right: 0;
+  position: absolute;
+  pointer-events: none;
 }
 #aabbcc{
   background-color: #f0ccf0;
-  height: 400px;
+  height: 800px;
   top: 120px;
-  width: 100%;
+  width: 1024px;
 }
